--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>jpa-reactive - 1.0.0-SNAPSHOT</title>
+        <title>quarkus-jpa-reactive - 1.0.0-SNAPSHOT</title>
         <style>
             body {
                 margin: 0;
@@ -236,7 +236,7 @@
                             <h5>Application</h5>
                             <ul>
                                 <li>GroupId: <code>com.vincenzoracca</code></li>
-                                <li>ArtifactId: <code>jpa-reactive</code></li>
+                                <li>ArtifactId: <code>quarkus-jpa-reactive</code></li>
                                 <li>Version: <code>1.0.0-SNAPSHOT</code></li>
                                 <li>Quarkus Version: <code>3.1.0.Final</code></li>
                             </ul>
